# dacapo

./: .gitignore  CMakeLists.txt  README.md  server.bat
etc/mix/: single.dcp
etc/mix/examples/: drum.dcp  drum8.dcp  melodie.dcp
etc/mix/examples/loop/: simple.dcp
etc/mix/simple1/: bass.dcp  drum.dcp  melodie.dcp
src/: app.cpp  app.hpp  main.cpp
src/chef/: ast.cpp  ast.hpp  chef.cpp  chef.hpp
src/parser/: lexertk.hpp  parser.cpp  parser.hpp
src/soundgen/: sample.cpp  sample.hpp  soundgen.cpp  soundgen.hpp  synth.cpp  synth.hpp
src/soundgen/sc/: oscpkt.hh
src/ui/: codeedit.cpp  codeedit.hpp  ui.cpp  ui.hpp
src/ui/internal/: imgui_codeeditor.cpp  imgui_codeeditor.h
src/ui/renderer/: renderer-win32.cpp  renderer.hpp
tests/: parser.t.cpp
